created task panel

--- a/client/index.html
+++ b/client/index.html
@@ -66,6 +66,7 @@
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
+          <script src="components/taskPanel/taskPanel.directive.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
