feat (localStore): create the localStore service

--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,7 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/localStore/localStore.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/workStream/workStream.controller.js"></script>
