feat (New Workstream) add pop-up to create a new work stream

--- a/client/index.html
+++ b/client/index.html
@@ -60,6 +60,7 @@
           <script src="app/localStore/localStore.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/newWorkstream/newWorkstream.controller.js"></script>
           <script src="app/workStream/workStream.controller.js"></script>
           <script src="app/workStream/workStream.js"></script>
           <script src="components/auth/auth.service.js"></script>
